<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DesignPoc</string>
    <string name="heading_xl">Heading X Large - Semi Bold 40/48</string>
    <string name="heading_l">Heading Large - Semibold 28/40</string>
    <string name="heading_m">Heading Medium - Regular 20/28</string>
    <string name="heading_s">Heading Small - Regular 16/24</string>
    <string name="title_l">Title Large - Semibold 18/32</string>
    <string name="title_m">Title Medium - Semibold 16/24</string>
    <string name="title_s">Title Small - Semibold 14/20</string>
    <string name="label_l">Label Large - Medium 16/24</string>
    <string name="label_m">Label medium - Medium 14/20</string>
    <string name="label_s">Label Small - Medium 12/16</string>
    <string name="label_x_s">Label X Small - Medium 10/12</string>
    <string name="body_l">Body Large - Regular 16/24</string>
    <string name="body_m">Body Medium - Regular 14/20</string>
    <string name="body_s">Body Small - Regular 12/16</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="design_system">Design System</string>
    <string name="test_case">Test Case</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="rest_installments">Rest Installments</string>
    <string name="k_egp">500 EGP</string>
    <string name="total_selected">Total Selected</string>
    <string name="next">Next</string>
    <string name="select_order_you_want_to_settle">Select Order You Want To Settle</string>
    <string name="buttons">Buttons</string>
    <string name="button">Button</string>
    <string name="otp" translatable="false">OTP</string>
    <string name="set_error">Set Error</string>
    <string name="clear_error">Clear Error</string>
    <string name="clearFields">Clear Fields</string>
    <string name="otp_error">Error Message Here</string>
    <string name="help_text_here">Help Text Here</string>
    <string name="enabled_button">Enable Button</string>
    <string name="disabled_button">Disable Button</string>
    <string name="edit_text">Edit Text</string>
    <string name="clear_focus">Clear Focus</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="country_code" translatable="false">+20</string>
    <string name="phone_number_hint">109 999 9999</string>
    <string name="card_number">Card Number</string>
    <string name="get_data">Retrieve data</string>
    <string name="nationa_id">National Id</string>
</resources>