<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/platinum_50"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:background="#F9FAFC"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F9FAFC"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:actionBarItemBackground"
                android:padding="@dimen/spacing_normal_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSelectOrderTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large_24"
                android:gravity="center"
                android:text="@string/select_order_you_want_to_settle"
                style="@style/ShahryHeadingLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBack"
                />

            <include
                android:id="@+id/testItemOne"
                layout="@layout/item_test_case"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal_16"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSelectOrderTitle"
                />

            <include
                android:id="@+id/testItemTwo"
                layout="@layout/item_test_case"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal_16"
                android:layout_marginTop="@dimen/spacing_normal_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/testItemOne"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="@dimen/spacing_x_small_4"
        android:paddingHorizontal="@dimen/spacing_normal_16"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/Poc.ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_large_24"
            android:paddingHorizontal="@dimen/spacing_normal_16"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_small_8"
            android:text="@string/k_egp"
            android:textColor="#FF7232"
            style="@style/ShahryHeadingMedium"
            app:layout_constraintBottom_toBottomOf="@id/btnNext"
            app:layout_constraintEnd_toStartOf="@id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/lblTotalSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ShahryBodySmall"
            android:text="@string/total_selected"
            android:textColor="#99A8A5"
            app:layout_constraintBottom_toTopOf="@id/tvTotalValue"
            app:layout_constraintStart_toStartOf="@id/tvTotalValue"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>